--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -1,8 +1,10 @@
 From nvcr.io/nvidia/pytorch:19.04-py3
 
+RUN bash install-cuda.sh
+
 RUN apt-get -y update
 
-RUN apt-get install -y python3-pip software-properties-common wget ffmpeg cuda-drivers
+RUN apt-get install -y python3-pip software-properties-common wget ffmpeg
 
 RUN apt-get -y update
 
